AC_PREREQ(2.50)

AC_INIT([OGRE], 0.12.0)

AC_CANONICAL_TARGET

#AM_INIT_AUTOMAKE([1.6.1 foreign no-installinfo no-installman subdir-objects])
AM_INIT_AUTOMAKE([OGRE], 0.12.0)
AM_CONFIG_HEADER(OgreMain/include/config.h)

dnl Check for programs
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_C_O
AC_PROG_INSTALL

AM_PROG_LIBTOOL

dnl GCC version check
if test x$GCC = xyes; then
    AC_MSG_CHECKING([version 3.x of gcc])
    if test -n "`$CC --version 2>&1|grep '3.'`"; then
        AC_DEFINE(EXT_HASH,, Use old STL hash options)
        AC_DEFINE(GCC_3_1,, 3.x GCC version)
        AC_SUBST(OGRE_CFLAGS, "-DGCC_3_1 -DEXT_HASH")
        AC_MSG_RESULT(yes);
    else
        AC_MSG_RESULT(no)!
    fi
fi

dnl Other stuff we need
OGRE_USE_STLPORT
AM_PATH_SDL(1.2.0)
AC_CHECK_FT2(9.0.0)

AC_CHECK_LIB(dl, dlopen)
AC_CHECK_LIB(m, pow)
AC_CHECK_LIB(z, gzopen)
AC_CHECK_LIB(IL, ilInit,,AC_MSG_ERROR([
****************************************************************
* You do not have DevIL installed.  This is required to build. *
* You may find it at http://openil.sourceforge.net/.           *
****************************************************************]))
AC_CHECK_LIB(ILU, iluFlipImage)
AC_CHECK_LIB(Cg, cgCreateProgram,,AC_MSG_ERROR([
****************************************************************
* You do not have the nVidia Cg libraries installed.           *
* Go to http://developer.nvidia.com/object/cg_toolkit.html     *
* (Click on Cg_Linux.tar.gz).                                  *
****************************************************************]))
AC_CHECK_FUNC(snprintf, AC_DEFINE(HAVE_SNPRINTF,,snprintf))
AC_CHECK_FUNC(vsnprintf, AC_DEFINE(HAVE_VSNPRINTF,,vsnprintf))

OGRE_GET_CONFIG_TOOLKIT
OGRE_GET_PLATFORM
OGRE_GET_GLSUPPORT

dnl Find the optional components we should build
OGRE_BUILD_PYTHON_LINK

dnl This needs to be figured out later (MingW)
OGRE_SETUP_FOR_HOST

dnl Detect endianness
OGRE_DETECT_ENDIAN

CFLAGS="$CFLAGS $SDL_CFLAGS"
CXXFLAGS="$CXXFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

dnl versioning info for libtool
dnl Note this is the ABI version which is not the same as our actual library version
OGREMAIN_CURRENT=2
OGREMAIN_REVISION=0
OGREMAIN_AGE=0
OGREMAIN_VERSION_INFO=$OGREMAIN_CURRENT:$OGREMAIN_REVISION:$OGREMAIN_AGE
AC_SUBST(OGREMAIN_VERSION_INFO)

dnl Create the makefiles
AC_CONFIG_FILES([Makefile \
    OgreMain/Makefile \
    OgreMain/src/Makefile \
    OgreMain/include/Makefile \
    PlatformManagers/Makefile \
    PlatformManagers/SDL/Makefile \
    PlatformManagers/SDL/src/Makefile
    PlatformManagers/SDL/include/Makefile
    PlatformManagers/gtk/Makefile \
    PlatformManagers/gtk/src/Makefile \
    PlatformManagers/gtk/include/Makefile \
    PlugIns/Makefile \
    PlugIns/BSPSceneManager/Makefile \
    PlugIns/BSPSceneManager/src/Makefile \
    PlugIns/BSPSceneManager/include/Makefile \
    PlugIns/CgProgramManager/Makefile \
    PlugIns/CgProgramManager/src/Makefile \
    PlugIns/CgProgramManager/include/Makefile \
    PlugIns/FileSystem/Makefile \
    PlugIns/FileSystem/src/Makefile \
    PlugIns/FileSystem/include/Makefile \
    PlugIns/GuiElements/Makefile \
    PlugIns/GuiElements/src/Makefile \
    PlugIns/GuiElements/include/Makefile \
    PlugIns/NatureSceneManager/Makefile \
    PlugIns/NatureSceneManager/src/Makefile \
    PlugIns/NatureSceneManager/include/Makefile \
    PlugIns/OctreeSceneManager/Makefile \
    PlugIns/OctreeSceneManager/src/Makefile \
    PlugIns/OctreeSceneManager/include/Makefile \
    PlugIns/ParticleFX/Makefile \
    PlugIns/ParticleFX/src/Makefile \
    PlugIns/ParticleFX/include/Makefile \
    RenderSystems/Makefile \
    RenderSystems/GL/Makefile \
    RenderSystems/GL/src/Makefile \
    RenderSystems/GL/include/Makefile \
    Samples/Makefile \
    Samples/Common/Makefile \
    Samples/Common/include/Makefile \
    Samples/BezierPatch/Makefile \
    Samples/BezierPatch/src/Makefile \
    Samples/BezierPatch/include/Makefile \
    Samples/CameraTrack/Makefile \
    Samples/CameraTrack/src/Makefile \
    Samples/CelShading/Makefile \
    Samples/CelShading/src/Makefile \
    Samples/CubeMapping/Makefile \
    Samples/CubeMapping/src/Makefile \
    Samples/CubeMapping/include/Makefile \
    Samples/Dot3Bump/Makefile \
    Samples/Dot3Bump/src/Makefile \
    Samples/EnvMapping/Makefile \
    Samples/EnvMapping/src/Makefile \
    Samples/EnvMapping/include/Makefile \
    Samples/Transpacency/Makefile \
    Samples/Transpacency/src/Makefile \
    Samples/Transpacency/include/Makefile \
    Samples/Lighting/Makefile \
    Samples/Lighting/src/Makefile \
    Samples/Lighting/include/Makefile \
    Samples/Nature/include/Makefile \
    Samples/Nature/src/Makefile \
    Samples/Nature/Makefile \
    Samples/ParticleFX/Makefile \
    Samples/ParticleFX/src/Makefile \
    Samples/ParticleFX/include/Makefile \
    Samples/RenderToTexture/Makefile \
    Samples/RenderToTexture/src/Makefile \
    Samples/RenderToTexture/include/Makefile \
    Samples/TextureFX/Makefile \
    Samples/TextureFX/src/Makefile \
    Samples/TextureFX/include/Makefile \
    Samples/SkyBox/Makefile \
    Samples/SkyBox/src/Makefile \
    Samples/SkyBox/include/Makefile \
    Samples/SkyDome/Makefile \
    Samples/SkyDome/src/Makefile \
    Samples/SkyDome/include/Makefile \
    Samples/SkyPlane/Makefile \
    Samples/SkyPlane/src/Makefile \
    Samples/SkyPlane/include/Makefile \
    Samples/Smoke/Makefile \
    Samples/Smoke/src/Makefile \
    Samples/Smoke/include/Makefile \
    Samples/BSP/Makefile \
    Samples/BSP/src/Makefile \
    Samples/BSP/include/Makefile \
    Samples/SkeletalAnimation/Makefile \
    Samples/SkeletalAnimation/src/Makefile \
    Samples/SkeletalAnimation/include/Makefile \
    Samples/Terrain/Makefile \
    Samples/Terrain/src/Makefile \
    Samples/Terrain/include/Makefile \
    Samples/Gui/Makefile \
    Samples/Gui/src/Makefile \
    Samples/Gui/include/Makefile \
    Samples/Water/Makefile \
    Samples/Water/src/Makefile \
    Samples/Water/include/Makefile \
    Tools/Makefile \
    Tools/MaterialUpgrader/Makefile \
    Tools/MaterialUpgrader/src/Makefile \
    Tools/MaterialUpgrader/include/Makefile \
    Tools/MeshUpgrader/Makefile \
    Tools/MeshUpgrader/src/Makefile \
    Tools/XMLConverter/Makefile \
    Tools/XMLConverter/src/Makefile \
    Tools/XMLConverter/include/Makefile \
    OGRE.pc
    ])

AC_OUTPUT
