SUBDIRS = SkeletalAnimation BezierPatch EnvMapping Transpacency Lighting \
ParticleFX TextureFX SkyDome BSP Common SkyPlane SkyBox CameraTrack Terrain \
RenderToTexture Water CubeMapping Dot3Bump Smoke CelShading Fresnel Shadows \
DynTex VolumeTex Grass DeferredShading FacialAnimation

if BUILD_CEGUI_SAMPLE
SUBDIRS += Gui
endif


