AC_PREREQ(2.50)

AC_INIT(OgreMain/include/Ogre.h)
AM_INIT_AUTOMAKE(OGRE,0.99c)
AM_CONFIG_HEADER(OgreMain/include/config.h)

AC_CANONICAL_TARGET

dnl Check for programs
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AM_PROG_LIBTOOL

dnl Other stuff we need
AC_USE_STLPORT
AC_GET_CONFIG_TOOLKIT
AM_PATH_SDL(1.2.0)
AC_CHECK_FT2(9.1.0)

AC_CHECK_LIB(jpeg, jpeg_start_decompress)
AC_CHECK_LIB(dl, dlopen)
AC_CHECK_LIB(m, pow)
AC_CHECK_LIB(z, gzopen)
AC_CHECK_LIB(png, png_create_read_struct)

AC_CHECK_FUNC(snprintf, AC_DEFINE(HAVE_SNPRINTF,,snprintf))
AC_CHECK_FUNC(vsnprintf, AC_DEFINE(HAVE_VSNPRINTF,,vsnprintf))

dnl Version checks
if test x$GCC = xyes; then
    AC_MSG_CHECKING([version 3.x of gcc])
    if test -n "`$CC --version 2>&1|grep '3.'`"; then
        AC_DEFINE(EXT_HASH,, Use old STL hash options)
        AC_DEFINE(GCC_3_1,, 3.x GCC version)
        AC_MSG_RESULT(yes);
    else
        AC_MSG_RESULT(no)
    fi
fi

AC_ARG_ENABLE(gl-multitexture, AC_HELP_STRING([--enable-gl-multitexture],
              [Turn on true multitexture support]),
              AC_DEFINE([OGRE_SDL_USE_MULTITEXTURING],,[Enable Multitexture Support]))

dnl This needs to be figured out later (MingW)
AC_DEFINE(OGRE_LINUX,,Linux Build of OGRE)

CXXFLAGS="$CXXFLAGS -D_REENTRANT"

dnl Create the makefiles
AC_OUTPUT(Makefile \
    OgreMain/Makefile \
    OgreMain/src/Makefile \
    OgreMain/include/Makefile \
    PlatformManagers/Makefile \
    PlatformManagers/SDL/Makefile \
    PlatformManagers/SDL/src/Makefile
    PlatformManagers/SDL/include/Makefile
    PlugIns/Makefile \
    PlugIns/BSPSceneManager/Makefile \
    PlugIns/BSPSceneManager/src/Makefile \
    PlugIns/BSPSceneManager/include/Makefile \
    PlugIns/FileSystem/Makefile \
    PlugIns/FileSystem/src/Makefile \
    PlugIns/FileSystem/include/Makefile \
    PlugIns/GuiElements/Makefile \
    PlugIns/GuiElements/src/Makefile \
    PlugIns/GuiElements/include/Makefile \
    PlugIns/OctreeSceneManager/Makefile \
    PlugIns/OctreeSceneManager/src/Makefile \
    PlugIns/OctreeSceneManager/include/Makefile \
    PlugIns/ParticleFX/Makefile \
    PlugIns/ParticleFX/src/Makefile
    PlugIns/ParticleFX/include/Makefile
    RenderSystems/Makefile \
    RenderSystems/SDL/Makefile \
    RenderSystems/SDL/src/Makefile \
    RenderSystems/SDL/include/Makefile \
    Samples/Makefile \
    Samples/Common/Makefile \
    Samples/Common/include/Makefile \
    Samples/BezierPatch/Makefile \
    Samples/BezierPatch/src/Makefile \
    Samples/BezierPatch/include/Makefile \
    Samples/CameraTrack/Makefile \
    Samples/CameraTrack/src/Makefile \
    Samples/EnvMapping/Makefile \
    Samples/EnvMapping/src/Makefile \
    Samples/EnvMapping/include/Makefile \
    Samples/Transpacency/Makefile \
    Samples/Transpacency/src/Makefile \
    Samples/Transpacency/include/Makefile \
    Samples/Lighting/Makefile \
    Samples/Lighting/src/Makefile \
    Samples/Lighting/include/Makefile \
    Samples/ParticleFX/Makefile \
    Samples/ParticleFX/src/Makefile \
    Samples/ParticleFX/include/Makefile \
    Samples/TextureFX/Makefile \
    Samples/TextureFX/src/Makefile \
    Samples/TextureFX/include/Makefile \
    Samples/SkyBox/Makefile \
    Samples/SkyBox/src/Makefile \
    Samples/SkyBox/include/Makefile \
    Samples/SkyDome/Makefile \
    Samples/SkyDome/src/Makefile \
    Samples/SkyDome/include/Makefile \
    Samples/SkyPlane/Makefile \
    Samples/SkyPlane/src/Makefile \
    Samples/SkyPlane/include/Makefile \
    Samples/BSP/Makefile \
    Samples/BSP/src/Makefile \
    Samples/BSP/include/Makefile \
    Samples/SkeletalAnimation/Makefile \
    Samples/SkeletalAnimation/src/Makefile \
    Samples/SkeletalAnimation/include/Makefile \
    Samples/Terrain/Makefile \
    Samples/Terrain/src/Makefile \
    Samples/Terrain/include/Makefile
    )
