INCLUDES = $(STLPORT_CFLAGS) $(FT2_CFLAGS) -I$(top_srcdir)/OgreMain/include

lib_LTLIBRARIES=libOgreMain.la

libOgreMain_la_SOURCES = OgreAnimation.cpp \
                         OgreAnimationState.cpp \
                         OgreAnimationTrack.cpp \
                         OgreArchiveEx.cpp \
                         OgreArchiveManager.cpp \
                         OgreAxisAlignedBox.cpp \
                         OgreBillboard.cpp \
                         OgreBillboardSet.cpp \
                         OgreBone.cpp \
                         OgreBitwise.cpp \
                         OgreCamera.cpp \
                         OgreCodec.cpp \
                         OgreColourValue.cpp \
                         OgreConfigFile.cpp \
                         OgreConfigOptionMap.cpp \
                         OgreController.cpp \
                         OgreControllerManager.cpp \
                         OgreDataChunk.cpp \
                         OgreDynLib.cpp \
                         OgreDynLibManager.cpp \
                         OgreEntity.cpp \
                         OgreException.cpp \
			 OgreGuiContainer.cpp \
			 OgreGuiElement.cpp \
			 OgreGuiElementCommands.cpp \
			 OgreGuiManager.cpp \
                         OgreImage.cpp \
                         OgreInput.cpp \
                         OgreJPEGCodec.cpp \
                         OgreKeyFrame.cpp \
                         OgreLight.cpp \
                         OgreLog.cpp \
                         OgreLogManager.cpp \
                         OgreMaterial.cpp \
                         OgreMaterialManager.cpp \
                         OgreMath.cpp \
                         OgreMatrix3.cpp \
                         OgreMatrix4.cpp \
                         OgreMemoryManager.cpp \
                         OgreMesh.cpp \
                         OgreMeshManager.cpp \
                         OgreMeshSerializer.cpp \
                         OgreMovableObject.cpp \
                         OgreNode.cpp \
                         OgreOofModelFile.cpp \
                         OgreOverlay.cpp \
                         OgrePNGCodec.cpp \
                         OgreParticleEmitter.cpp \
                         OgreParticleEmitterCommands.cpp \
                         OgreParticleIterator.cpp \
                         OgreParticleSystem.cpp \
                         OgreParticleSystemManager.cpp \
                         OgrePatchSurface.cpp \
                         OgrePlane.cpp \
                         OgrePlatformManager.cpp \
                         OgrePredefinedControllers.cpp \
                         OgreQuaternion.cpp \
                         OgreRenderQueue.cpp \
                         OgreRenderSystem.cpp \
                         OgreRenderTarget.cpp \
                         OgreRenderWindow.cpp \
                         OgreRenderWindowMap.cpp \
                         OgreResourceManager.cpp \
                         OgreResourceMap.cpp \
                         OgreRoot.cpp \
			 OgreRotationSpline.cpp \
                         OgreSDDataChunk.cpp \
                         OgreSceneManager.cpp \
                         OgreSceneManagerEnumerator.cpp \
                         OgreSceneNode.cpp \
                         OgreSerializer.cpp \
                         OgreSimpleRenderable.cpp \
			 OgreSimpleSpline.cpp \
                         OgreSingleton.cpp \
                         OgreSkeleton.cpp \
                         OgreSkeletonManager.cpp \
                         OgreSkeletonSerializer.cpp \
                         OgreString.cpp \
                         OgreStringConverter.cpp \
                         OgreStringInterface.cpp \
                         OgreStringVector.cpp \
                         OgreSubEntity.cpp \
                         OgreSubMesh.cpp \
                         OgreTGACodec.cpp \
                         OgreTexture.cpp \
                         OgreTextureFont.cpp \
                         OgreTextureLayer.cpp \
                         OgreTextureManager.cpp \
                         OgreVector3.cpp \
                         OgreViewport.cpp \
                         OgreZip.cpp \
                         OgreZipArchiveFactory.cpp \
                         unzip.c

libOgreMain_la_LIBADD= $(STLPORT_LIBS) $(FT2_LIBS)
