INCLUDES = $(STLPORT_CFLAGS) $(FT2_CFLAGS) -I$(top_srcdir)/OgreMain/include -DOGRE_NONCLIENT_BUILD

lib_LTLIBRARIES=libOgreMain.la

libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                         OgreActionTarget.cpp \
                         OgreAnimation.cpp \
                         OgreAnimationState.cpp \
                         OgreAnimationTrack.cpp \
                         OgreArchiveEx.cpp \
                         OgreArchiveManager.cpp \
                         OgreAxisAlignedBox.cpp \
                         OgreBillboard.cpp \
                         OgreBillboardSet.cpp \
                         OgreBone.cpp \
                         OgreBitwise.cpp \
                         OgreCamera.cpp \
                         OgreCodec.cpp \
                         OgreColourValue.cpp \
                         OgreCommon.cpp \
                         OgreConfigFile.cpp \
                         OgreConfigOptionMap.cpp \
                         OgreController.cpp \
                         OgreControllerManager.cpp \
                         OgreCursor.cpp \
                         OgreDataChunk.cpp \
                         OgreDynLib.cpp \
                         OgreDynLibManager.cpp \
                         OgreEntity.cpp \
                         OgreEventDispatcher.cpp \
                         OgreEventMulticaster.cpp \
                         OgreEventProcessor.cpp \
                         OgreEventQueue.cpp \
                         OgreException.cpp \
                         OgreFont.cpp \
                         OgreFontManager.cpp \
                         OgreGuiContainer.cpp \
                         OgreGuiElement.cpp \
                         OgreGuiElementCommands.cpp \
                         OgreGuiManager.cpp \
                         OgreImage.cpp \
			 OgreImageCodec.cpp \
                         OgreInput.cpp \
                         OgreInputEvent.cpp \
                         OgreJPEGCodec.cpp \
                         OgreKeyFrame.cpp \
                         OgreLight.cpp \
                         OgreListSelectionTarget.cpp \
                         OgreLog.cpp \
                         OgreLogManager.cpp \
                         OgreMaterial.cpp \
                         OgreMaterialManager.cpp \
			 OgreMaterialSerializer.cpp \
                         OgreMath.cpp \
                         OgreMatrix3.cpp \
                         OgreMatrix4.cpp \
                         OgreMemoryManager.cpp \
                         OgreMesh.cpp \
                         OgreMeshManager.cpp \
                         OgreMeshSerializer.cpp \
                         OgreMouseEvent.cpp \
                         OgreMouseMotionTarget.cpp \
                         OgreMouseTarget.cpp \
                         OgreMovableObject.cpp \
                         OgreNode.cpp \
                         OgreOofModelFile.cpp \
                         OgreOverlay.cpp \
                         OgreOverlayManager.cpp \
                         OgrePNGCodec.cpp \
                         OgreParticleEmitter.cpp \
                         OgreParticleEmitterCommands.cpp \
                         OgreParticleIterator.cpp \
                         OgreParticleSystem.cpp \
                         OgreParticleSystemManager.cpp \
                         OgrePatchSurface.cpp \
                         OgrePlane.cpp \
                         OgrePlatformManager.cpp \
                         OgrePredefinedControllers.cpp \
                         OgreProgressiveMesh.cpp \
                         OgreQuaternion.cpp \
                         OgreRenderQueue.cpp \
                         OgreRenderSystem.cpp \
                         OgreRenderTarget.cpp \
                         OgreRenderTexture.cpp \
                         OgreRenderWindow.cpp \
                         OgreResourceManager.cpp \
                         OgreResourceMap.cpp \
                         OgreRoot.cpp \
                         OgreRotationSpline.cpp \
                         OgreSDDataChunk.cpp \
                         OgreSceneManager.cpp \
                         OgreSceneManagerEnumerator.cpp \
                         OgreSceneNode.cpp \
                         OgreSerializer.cpp \
                         OgreSimpleRenderable.cpp \
                         OgreSimpleSpline.cpp \
                         OgreSingleton.cpp \
                         OgreSkeleton.cpp \
                         OgreSkeletonManager.cpp \
                         OgreSkeletonSerializer.cpp \
                         OgreString.cpp \
                         OgreStringConverter.cpp \
                         OgreStringInterface.cpp \
                         OgreStringVector.cpp \
                         OgreSubEntity.cpp \
                         OgreSubMesh.cpp \
			 OgreTagPoint.cpp \
                         OgreTGACodec.cpp \
                         OgreTexture.cpp \
                         OgreTextureLayer.cpp \
                         OgreTextureManager.cpp \
						 OgreUserDefinedObject.cpp \
                         OgreVector3.cpp \
                         OgreViewport.cpp \
                         OgreWireBoundingBox.cpp \
                         OgreZip.cpp \
                         OgreZipArchiveFactory.cpp \
                         unzip.c

libOgreMain_la_LIBADD= $(STLPORT_LIBS) $(FT2_LIBS)
